--- a/backend/scss/_misc.scss
+++ b/backend/scss/_misc.scss
@@ -115,9 +115,8 @@
 
 
 
-button,
-select {
-  border-radius: 40px;
+button {
+  border-radius: 4px;
 }
 
 button {
@@ -181,6 +180,7 @@ a {
   border: 0px solid #ccc;
   text-decoration: underline;
 }
+
 
 
 input[type="checkbox"] {
@@ -701,7 +701,7 @@ input[type="checkbox"] {
  */
 .ps__thumb-x {
   background-color: #aaa;
-  border-radius: 6px;
+  border-radius: 4px;
   transition: background-color .2s linear, height .2s ease-in-out;
   -webkit-transition: background-color .2s linear, height .2s ease-in-out;
   height: 6px;
@@ -713,7 +713,7 @@ input[type="checkbox"] {
 
 .ps__thumb-y {
   background-color: #aaa;
-  border-radius: 6px;
+  border-radius: 4px;
   transition: background-color .2s linear, width .2s ease-in-out;
   -webkit-transition: background-color .2s linear, width .2s ease-in-out;
   width: 6px;
