--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8736,205 +8736,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d63f58; }
+  background: #2402ff; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4307ed; }
+  background: #9cb1db; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #11f439; }
+  background: #ae6927; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #80dc31; }
+  background: #d39e78; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #d445de; }
+  background: #a9375b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #23d644; }
+  background: #b08756; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #113c3f; }
+  background: #fd7d96; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #61ac38; }
+  background: #cf5f25; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #397c3a; }
+  background: #041341; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #48e23e; }
+  background: #e2e15b; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #e9a6b4; }
+  background: #1d404a; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #36e8c3; }
+  background: #6a15fc; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #43944f; }
+  background: #389377; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a8bc80; }
+  background: #7f0c22; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #4d1d49; }
+  background: #7187d7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #82b94a; }
+  background: #1c6673; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #65aa2d; }
+  background: #5ba90c; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #a8b57b; }
+  background: #05c3ac; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #72ebcf; }
+  background: #adfe2d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #430687; }
+  background: #608d46; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1880bd; }
+  background: #d0e987; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #da60f3; }
+  background: #bb9053; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #a5e4f3; }
+  background: #27acae; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #8837ce; }
+  background: #394d0c; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #88ce6c; }
+  background: #795a96; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c0ecc6; }
+  background: #fb7535; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #30127b; }
+  background: #136caf; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #919133; }
+  background: #46a253; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #e44c8d; }
+  background: #8e8a8c; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #dd822a; }
+  background: #4ca326; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #a95ae2; }
+  background: #e93246; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #591317; }
+  background: #62cba9; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #06702f; }
+  background: #301042; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1e3b4b; }
+  background: #d8ff32; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #f65c36; }
+  background: #c9fb91; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #67d105; }
+  background: #ba15be; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #5d59b0; }
+  background: #d1dd20; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #dae9ec; }
+  background: #71e0d1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e09f9c; }
+  background: #61db1e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #66931e; }
+  background: #9a83c4; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #290419; }
+  background: #368f59; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #014126; }
+  background: #3ea04d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #bf0776; }
+  background: #83f6b8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #d61eeb; }
+  background: #70abeb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #8f4d53; }
+  background: #eae29e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #4f0801; }
+  background: #b453c5; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #1967a7; }
+  background: #aa6030; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #388211; }
+  background: #3f2de2; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #27f802; }
+  background: #98bbb3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #41dd03; }
+  background: #8d206a; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ee7a0c; }
+  background: #45e026; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d49b07; }
+  background: #202a38; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0a24df; }
+  background: #984a05; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #683226; }
+  background: #e62a93; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #92f668; }
+  background: #a7c2a0; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #476974; }
+  background: #d76ecb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5df1f9; }
+  background: #be712c; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #6ec33a; }
+  background: #9070b8; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #5df681; }
+  background: #a9a8b9; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #25a389; }
+  background: #36ebe5; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #1c78ec; }
+  background: #0a944c; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #09d2ee; }
+  background: #d39cfb; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #754575; }
+  background: #8823cb; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b7ddd9; }
+  background: #5c2288; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #9b5661; }
+  background: #fec079; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #015395; }
+  background: #f18b28; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #10a16d; }
+  background: #6883fd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #9bccec; }
+  background: #da28f9; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #3fa3f8; }
+  background: #de69cd; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #1417d5; }
+  background: #5f219f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #67988c; }
+  background: #eb4d47; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c84a79; }
+  background: #4a2b9b; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #b81c92; }
+  background: #b8e5f6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #25f255; }
+  background: #a174cb; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #c00a9d; }
+  background: #28a286; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a0fb97; }
+  background: #b385d0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4eebab; }
+  background: #ce7282; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ee7cc7; }
+  background: #5c15b2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #5c1850; }
+  background: #90ea4b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #7eff9e; }
+  background: #dce922; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #fdc238; }
+  background: #effe51; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d88096; }
+  background: #3202db; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #20981f; }
+  background: #04d549; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #0bd9c5; }
+  background: #7fca02; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #9fa277; }
+  background: #1e2883; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5f712f; }
+  background: #3f9711; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #0a8876; }
+  background: #ad3418; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #5f273d; }
+  background: #54c013; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f0944c; }
+  background: #c37eb8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #7c498d; }
+  background: #de2c45; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #8b85b5; }
+  background: #7d8ffb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #49d8c6; }
+  background: #bbf1fb; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0ae076; }
+  background: #541170; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3e43d1; }
+  background: #4b89ee; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #aed160; }
+  background: #76a5df; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #a431f5; }
+  background: #499545; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #c7b7ed; }
+  background: #0401c4; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #43cf74; }
+  background: #998875; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #1e54b3; }
+  background: #eac831; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9fae64; }
+  background: #7b032a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12843,6 +12843,9 @@ table .parent-row {
   vertical-align: bottom; }
 .add-role-checklist-modal label {
   margin: 0px !important; }
+
+.col-icons div {
+  padding: 0px 4px !important; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
