--- a/backend/scss/_fahad-responsive.scss
+++ b/backend/scss/_fahad-responsive.scss
@@ -378,9 +378,25 @@
         }
     }
 
+    .notification-main-wrapper {
+        .adding-adapter-modal-header {
+            margin-top: 15px !important;
+        }
+
+        .notification-model-header {
+            padding-top: 5px !important;
+        }
+    }
+
 }
 
 /*767 screen end here*/
+/*768 to 1023 screen css*/
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .LoginPanel {
+        padding: 20px;
+    }
+}
 
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
     .query-wizard-exp-contents {
