--- a/backend/scss/_font.scss
+++ b/backend/scss/_font.scss
@@ -32,8 +32,7 @@
 
 table .bold-heading {
     font-weight: normal;
-    color: #9A9A9A;
+    color: #4C4C4C;
     font-size: 16px;
     background: #ecedf2;
 }
-
